--- a/ui/Editor.ui
+++ b/ui/Editor.ui
@@ -117,8 +117,8 @@
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>343</width>
-                 <height>455</height>
+                 <width>98</width>
+                 <height>28</height>
                 </rect>
                </property>
                <widget class="QWidget" name="gridLayoutWidget_3">
@@ -140,7 +140,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="botonGuardar">
+         <widget class="QPushButton" name="botonGuardarMapa">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
             <horstretch>0</horstretch>
