--- a/ui/Editor.ui
+++ b/ui/Editor.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>829</width>
-    <height>638</height>
+    <width>976</width>
+    <height>689</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -24,14 +24,57 @@
     <widget class="QWidget" name="centralwidget" native="true">
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
-       <layout class="QGridLayout" name="mapLayout">
-        <property name="sizeConstraint">
-         <enum>QLayout::SetDefaultConstraint</enum>
+       <widget class="QScrollArea" name="scrollArea_mapa">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
         </property>
-        <property name="spacing">
-         <number>0</number>
+        <property name="maximumSize">
+         <size>
+          <width>600</width>
+          <height>600</height>
+         </size>
         </property>
-       </layout>
+        <property name="widgetResizable">
+         <bool>true</bool>
+        </property>
+        <widget class="QWidget" name="scrollArea_widget_mapa">
+         <property name="geometry">
+          <rect>
+           <x>0</x>
+           <y>0</y>
+           <width>470</width>
+           <height>598</height>
+          </rect>
+         </property>
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <widget class="QWidget" name="">
+          <property name="geometry">
+           <rect>
+            <x>7</x>
+            <y>7</y>
+            <width>451</width>
+            <height>581</height>
+           </rect>
+          </property>
+          <layout class="QGridLayout" name="mapLayout">
+           <property name="sizeConstraint">
+            <enum>QLayout::SetDefaultConstraint</enum>
+           </property>
+           <property name="spacing">
+            <number>0</number>
+           </property>
+          </layout>
+         </widget>
+        </widget>
+       </widget>
       </item>
       <item>
        <layout class="QVBoxLayout" name="verticalLayout">
@@ -73,7 +116,7 @@
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>376</width>
+                 <width>449</width>
                  <height>455</height>
                 </rect>
                </property>
