cambio copia de strings por referencias. corregidos algunos bugs con cantidad de jugadores.

--- a/ui/Editor.ui
+++ b/ui/Editor.ui
@@ -17,7 +17,7 @@
    </sizepolicy>
   </property>
   <property name="windowTitle">
-   <string>Editor</string>
+   <string>Editor de mapas de Dune</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_3">
    <item row="0" column="1">
@@ -31,10 +31,16 @@
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
+        <property name="minimumSize">
+         <size>
+          <width>500</width>
+          <height>500</height>
+         </size>
+        </property>
         <property name="maximumSize">
          <size>
-          <width>600</width>
-          <height>600</height>
+          <width>800</width>
+          <height>800</height>
          </size>
         </property>
         <property name="widgetResizable">
@@ -45,8 +51,8 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>439</width>
-           <height>598</height>
+           <width>498</width>
+           <height>662</height>
           </rect>
          </property>
          <property name="sizePolicy">
@@ -60,8 +66,8 @@
            <rect>
             <x>7</x>
             <y>7</y>
-            <width>451</width>
-            <height>581</height>
+            <width>491</width>
+            <height>651</height>
            </rect>
           </property>
           <layout class="QGridLayout" name="mapLayout">
@@ -166,7 +172,7 @@
           </property>
           <property name="minimumSize">
            <size>
-            <width>500</width>
+            <width>300</width>
             <height>500</height>
            </size>
           </property>
@@ -194,7 +200,7 @@
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>480</width>
+                 <width>421</width>
                  <height>455</height>
                 </rect>
                </property>
@@ -241,8 +247,8 @@
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>98</width>
-                 <height>28</height>
+                 <width>421</width>
+                 <height>455</height>
                 </rect>
                </property>
                <property name="sizePolicy">
@@ -282,8 +288,8 @@
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>98</width>
-                 <height>28</height>
+                 <width>421</width>
+                 <height>455</height>
                 </rect>
                </property>
                <property name="sizePolicy">
@@ -323,8 +329,8 @@
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>98</width>
-                 <height>28</height>
+                 <width>421</width>
+                 <height>455</height>
                 </rect>
                </property>
                <widget class="QWidget" name="gridLayoutWidget_4">
@@ -358,8 +364,8 @@
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>98</width>
-                 <height>28</height>
+                 <width>421</width>
+                 <height>455</height>
                 </rect>
                </property>
                <property name="sizePolicy">
@@ -399,8 +405,8 @@
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>98</width>
-                 <height>28</height>
+                 <width>421</width>
+                 <height>455</height>
                 </rect>
                </property>
                <widget class="QWidget" name="gridLayoutWidget_6">
@@ -434,8 +440,8 @@
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>98</width>
-                 <height>28</height>
+                 <width>421</width>
+                 <height>455</height>
                 </rect>
                </property>
                <property name="sizePolicy">
